@@ -25,6 +25,8 @@
       my $comparator = sub compare : long ($self : self, $x1 : long, $x2 : long) {
         return $x1 * $x2;
       };
+      
+  - isa can check interface
   
 0.0369 2018-09-08
   - fix hash key buffer memory bug.
